--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 /laprak
 laprak
 laprak/
+.responsi01
+/responsi01
+responsi01
+responsi01/
+.responsi02
+/responsi02
+responsi02
+responsi02/
+.responsidua
+/responsidua
+responsidua
+responsidua/
+.Responsi2_PPBO_L0124103
+/Responsi2_PPBO_L0124103
+Responsi2_PPBO_L0124103
+Responsi2_PPBO_L0124103/
